:fire: UPDATE: added docuement.sh

--- a/configs/hypr/hyprland.conf
+++ b/configs/hypr/hyprland.conf
@@ -40,6 +40,7 @@ $menu = tofi-drun --drun-launch=true
  exec-once = $terminal
  exec-once = swww-daemon & ironbar
  exec-once = ~/.config/hypr/scripts/wallpaper-switcher.sh
+ exec-once = keepassxc --keyfile ~/Documents/keyfile ~/Docu/Passwords.kdbx --minimized
 
 #############################
 ### ENVIRONMENT VARIABLES ###
