--- a/configs/ironbar/config.json
+++ b/configs/ironbar/config.json
@@ -50,6 +50,7 @@
   "end": [
     {
       "type": "tray",
+      "class": "btn tray-btn",
       "direction": "h",
       "prefer_theme_icon": false
     },
