:fire: UPDATE: added fonts.sh

--- a/configs/hypr/hyprland.conf
+++ b/configs/hypr/hyprland.conf
@@ -28,6 +28,9 @@ monitor=,preferred,auto,auto
 $terminal = alacritty
 $fileManager = alacritty -e yazi
 $menu = tofi-drun --drun-launch=true
+$browser = brave
+$network = alacritty -e impala
+$code_editor = alacritty -e nvim
 
 
 #################
@@ -40,7 +43,7 @@ $menu = tofi-drun --drun-launch=true
  exec-once = $terminal
  exec-once = swww-daemon & ironbar
  exec-once = ~/.config/hypr/scripts/wallpaper-switcher.sh
- exec-once = keepassxc --keyfile ~/Documents/keyfile ~/Docu/Passwords.kdbx --minimized
+
 
 #############################
 ### ENVIRONMENT VARIABLES ###
@@ -245,6 +248,9 @@ $mainMod = SUPER # Sets "Windows" key as main modifier
 
 # Example binds, see https://wiki.hypr.land/Configuring/Binds/ for more
 
+bind = $mainMod, B, exec, $browser
+bind = $mainMod, C, exec, $code_editor
+bind = $mainMod, N, exec, $network
 bind = $mainMod SHIFT, W, exec, ~/.config/hypr/scripts/wallpaper-switcher.sh
 bind = $mainMod, PRINT, exec, ~/.config/satty/screenshot.sh
 bind = $mainMod, RETURN, exec, $terminal
