--- a/configs/hypr/hyprland.conf
+++ b/configs/hypr/hyprland.conf
@@ -249,14 +249,14 @@ $mainMod = SUPER # Sets "Windows" key as main modifier
 # Example binds, see https://wiki.hypr.land/Configuring/Binds/ for more
 
 bind = $mainMod, B, exec, $browser
-bind = $mainMod, C, exec, $code_editor
-bind = $mainMod, N, exec, $network
+bind = $mainMod, C, exec, $code_editor,
+bind = $mainMod, N, exec, $network,
 bind = $mainMod SHIFT, W, exec, ~/.config/hypr/scripts/wallpaper-switcher.sh
 bind = $mainMod, PRINT, exec, ~/.config/satty/screenshot.sh
 bind = $mainMod, RETURN, exec, $terminal
 bind = $mainMod, Q, killactive,
 bind = $mainMod, M, exit,
-bind = $mainMod, E, exec, $fileManager
+bind = $mainMod, E, exec, $fileManager,
 bind = $mainMod, V, togglefloating,
 bind = $mainMod, R, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
