:bug: BUG: fixed issue with code editor shortcut

--- a/configs/hypr/hyprland.conf
+++ b/configs/hypr/hyprland.conf
@@ -249,7 +249,7 @@ $mainMod = SUPER # Sets "Windows" key as main modifier
 # Example binds, see https://wiki.hypr.land/Configuring/Binds/ for more
 
 bind = $mainMod, B, exec, $browser
-bind = $mainMod, C, exec, $code_editor,
+bind = $mainMod, C, exec, $code_editor
 bind = $mainMod, N, exec, $network,
 bind = $mainMod SHIFT, W, exec, ~/.config/hypr/scripts/wallpaper-switcher.sh
 bind = $mainMod, PRINT, exec, ~/.config/satty/screenshot.sh
