--- a/configs/hypr/hyprland.conf
+++ b/configs/hypr/hyprland.conf
@@ -15,7 +15,8 @@
 ################
 
 # See https://wiki.hypr.land/Configuring/Monitors/
-monitor=,preferred,auto,auto
+# monitor=,preferred,auto,auto
+monitor=eDP-1,2560x1440@144,0x0,1
 
 
 ###################
@@ -250,7 +251,7 @@ $mainMod = SUPER # Sets "Windows" key as main modifier
 
 bind = $mainMod, B, exec, $browser
 bind = $mainMod, C, exec, $code_editor
-bind = $mainMod, N, exec, $network,
+bind = $mainMod, N, exec, $network
 bind = $mainMod SHIFT, W, exec, ~/.config/hypr/scripts/wallpaper-switcher.sh
 bind = $mainMod, PRINT, exec, ~/.config/satty/screenshot.sh
 bind = $mainMod, RETURN, exec, $terminal
